<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_search"
        android:showAsAction="always|collapseActionView"
        android:title="@string/menu_search"/>
    <item
        android:id="@+id/menu_share"
        android:actionProviderClass="android.widget.ShareActionProvider"
        android:icon="@drawable/ic_dark_social_share"
        android:showAsAction="never"
        android:title="@string/menu_share"/>
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:showAsAction="never"
        android:title="@string/menu_settings">
    </item>
    <item
        android:id="@+id/menu_user_guide"
        android:icon="@drawable/ic_help"
        android:showAsAction="never"
        android:title="@string/menu_user_guide">
    </item>
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_about"
        android:showAsAction="never"
        android:title="@string/menu_about">
    </item>

</menu>