<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <ImageView
        android:id="@android:id/icon1"
        android:layout_width="match_parent"
        android:layout_height="100dip"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/title_activity_about"
        android:padding="25dip"
        android:src="@drawable/ic_about" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@android:id/icon1"
        android:gravity="center"
        android:padding="10dip"
        android:text="@string/str_about_text1"
        android:textAlignment="center" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="60dip"
        android:layout_above="@android:id/text1"
        android:contentDescription="@string/title_activity_about"
        android:padding="10dip"
        android:src="@drawable/ic_about" />

    <TextView
        android:id="@android:id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@android:id/text2"
        android:gravity="center"
        android:padding="10dip"
        android:text="@string/str_about_text2"
        android:textAlignment="center" />

    <TextView
        android:id="@android:id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:padding="10dip"
        android:text="@string/str_about_text3"
        android:textAlignment="center" />

</RelativeLayout>