<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="1"
        android:fillViewport="true" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <Chronometer
                android:id="@+id/timer"
                style="@style/TextAppearance.Large"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:format="Elapsed: %s"
                android:gravity="center" />

            <ViewFlipper
                android:id="@+id/questionSet"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="25dip" >
            </ViewFlipper>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/overlay"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:gravity="center"
            android:orientation="vertical" >

            <TextView
                android:id="@android:id/text1"
                style="@style/TextAppearance.Large.Bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center" />

            <TextView
                android:id="@android:id/text2"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/str_label_loading" />

            <Button
                android:id="@+id/stop"
                style="@android:style/TextAppearance.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/str_stop"
                android:visibility="gone" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:id="@+id/evaluate_bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal|bottom"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_previous" />

        <Button
            android:id="@+id/start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_start" />

        <Button
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/str_next" />
    </LinearLayout>

</LinearLayout>