<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/splash_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:keepScreenOn="true"
    tools:context=".SplashActivity" >

    <LinearLayout
        android:id="@+id/splash_bottom_buttons"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dip"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/splash_help_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/splash_help_button"
            android:textAppearance="@android:style/TextAppearance.Medium" />

        <View
            android:layout_width="10dip"
            android:layout_height="match_parent" />

        <Button
            android:id="@+id/splash_next_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:text="@string/splash_next_button"
            android:textAppearance="@android:style/TextAppearance.Medium" />
    </LinearLayout>

    <ImageView
        android:id="@+id/splash_image_logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/splash_bottom_buttons"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:contentDescription="@string/app_name"
        android:gravity="center"
        android:scaleType="centerInside"
        android:src="@drawable/adaptive_learning" />

    <TextView
        android:id="@+id/splash_text_logo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/splash_bottom_buttons"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center"
        android:text="@string/app_name" />

</RelativeLayout>